@@ -31,6 +31,9 @@
 	* src/server/exmpp_server_session.erl (want_establishment): Replace
 	exceptions and 'ok' by bool().
 
+	* src/server/exmpp_server_legacy_auth.erl: Add a function to tell if
+	the peer wants to know the authentication fields.
+
 2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_jid.erl: Add functions to convert to and from
